# knowledge-base

./: CLAUDE.md  package.json  pnpm-lock.yaml
.claude/commands/: dev-loop.md  loop-gen.md
.claude/hooks/: skill-forced-eval.cjs
.claude/skills/release-publish/: SKILL.md
.claude/skills/tauri-packaging/: SKILL.md
.codex/skills/autonomous-dev/: SKILL.md
.codex/skills/release-publish/: SKILL.md
.github/workflows/: android.yml
docs/: plugin-system-phase3-design.md
docs/tasks/: bilibili-feedback-tasks.md  mobile-migration-tasks.md  qq-group-feedback-tasks.md  sync-refactor-tasks.md
src/: App.tsx  Router.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/kb-core/: Cargo.toml
src-tauri/kb-core/src/: lib.rs
src-tauri/mac/: ocr_vision.m
src-tauri/mcp/: Cargo.toml
src-tauri/mcp/src/: main.rs
src-tauri/resources/ocr/: README.md
src-tauri/src/: crash_handler.rs  lib.rs  state.rs  tray.rs
src-tauri/src/commands/: daily.rs  dataview.rs  export.rs  mcp.rs  mobile_update.rs  mod.rs  notes.rs  ocr.rs  pdf.rs  projects.rs  push.rs  script.rs  sync_v1.rs  system.rs  tasks.rs  template.rs
src-tauri/src/database/: dataview.rs  links.rs  mod.rs  note_attachments.rs  notes.rs  projects.rs  push.rs  schema.rs  scripts.rs  sync_v1.rs  tags.rs  tasks.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: ai.rs  daily.rs  data_dir.rs  dataview.rs  export.rs  export_html.rs  http_client.rs  import_attachments.rs  mac_ocr.rs  mod.rs  note.rs  ocr.rs  pdf.rs  plugin.rs  popout_window.rs  project.rs  script.rs  shortcut.rs  sync.rs  tasks.rs  (+3 more)
src/components/: QuickNoteCaptureModal.tsx
src/lib/: aiProviderPresets.ts  exportPdf.ts  noteCreator.tsx  printNote.ts  utils.ts
src/store/: index.ts
src/styles/: global.css  themes.css
src/types/: index.ts
(+83 files in other folders)
