[package]
name = "kb-core"
version = "1.0.0"
description = "Knowledge Base MCP Server core - 抽离自 kb-mcp，让主应用也能 in-process 复用同一份工具实现"
authors = ["抓蛙师"]
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
name = "kb_core"
path = "src/lib.rs"

[dependencies]
# rmcp：MCP server 实现
# - server: 服务端能力 + ServiceExt trait
# - macros: #[tool] / #[tool_router] / #[tool_handler]
# - schemars: 工具入参 struct 派生 JsonSchema
# 注意：不依赖 transport-io，stdio 由 kb-mcp binary 自己处理；
# 主应用也可以用 tokio::io::duplex 当 transport 跑 in-memory server
rmcp = { version = "1.5", features = ["server", "macros", "schemars"] }
tokio = { version = "1", features = ["sync", "macros"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
anyhow = "1"
# create_note_from_template 自动生成「模板名 · YYYY-MM-DD」标题用
chrono = "0.4"
